app/src/main/kotlin/org/example/compiler/error/MatchingOperatorNotFoundException.kt
package org.example.compiler.error

class MatchingOperatorNotFoundException(val error: MatchingOperatorNotFoundError) : Exception()